---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { invoice_id, billing_country }\nappend (\n  from invoices\n  select { invoice_id = `invoice_id` + 100, billing_country }\n)\nfilter (billing_country | text.starts_with(\"I\"))\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_simple.prql
---
from invoices
select {invoice_id, billing_country}
append (
  from invoices
  select {
    invoice_id = invoice_id + 100,
    billing_country,
  }
)
filter (billing_country | text.starts_with "I")
